--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "pkg-dir": "^7.0.0",
     "punycode": "^2.3.1",
     "randombytes": "^2.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rechoir": "^0.8.0",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.1.1",
